# langgraph-templete

./: .env.example  .gitignore  README.md  chatbot.py  design-pattern.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  chatbot.py  main.py
app/a2a_agents/: __init__.py  a2a_chatbot.py
app/agents/: __init__.py  chatbot.py  passive_goal_creater.py
app/libs/: __init__.py  logger.py
app/tools/: __init__.py  a2a_client.py  currency_rate.py  math.py  mcp_client.py
cli/: __init__.py  a2a_query.py  query.py  run_a2a_server.py  run_server.py
test/a2a_agents/: __init__.py  rest_api.py
